<?xml version="1.0"?>
<package format="2">
  <name>fisheye_flattener</name>
  <version>0.0.0</version>
  <description>The fisheye flattener package</description>
  
  <maintainer email="acw@todo.todo">acw</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>camera_model</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
